# Lightweight-Event-Driven-Platform-Core

./: CMakeLists.txt  README.md
include/core/: EventLoop.h  Events.h  Metrics.h  Scheduler.h  Task.h
src/: EventLoop.cpp  Metrics.cpp  Scheduler.cpp  main.cpp
tests/: test_scheduler.cpp
tools/: stress_injector.cpp
